add a new hook:beforeGetHtml

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>Exsied</title>
 	</head>
 	<body>
-		<p>Exsied demo:</p>
+		<p>Exsied demo: <span id="test"></span></p>
 		<div id="app"></div>
 		<script type="module" src="/src/index_dev.ts"></script>
 	</body>
