--- a/test_dist/index_esm.html
+++ b/test_dist/index_esm.html
@@ -12,27 +12,9 @@
 		<link rel="stylesheet" href="../dist/style.css" />
 		<script type="module">
 			import { DEMO_CONTENT } from '../demo_content.js'
-			import {
-				KEY_CTRL,
-				about,
-				backgroundColor,
-				bold,
-				exsied,
-				findAndReplace,
-				fontFamily,
-				fontSize,
-				headings,
-				image,
-				italic,
-				link,
-				sourceCode,
-				strikethrough,
-				table,
-				textColor,
-				underline,
-			} from '../dist/index.js'
+			import { KEY_CTRL, exsied, plugins } from '../dist/index.js'
 
-			about.conf.deveploers.push(
+			plugins.about.conf.deveploers.push(
 				{
 					name: 'enassi github',
 					repoLink: 'https://github.com/enassi/enassi',
@@ -52,26 +34,26 @@
 			exsied.init({
 				id: 'app',
 				plugins: [
-					bold,
-					italic,
-					underline,
-					strikethrough,
-					headings,
-					link,
-					image,
-					table,
-					fontSize,
-					fontFamily,
-					backgroundColor,
-					textColor,
-					findAndReplace,
-					sourceCode,
+					plugins.bold,
+					plugins.italic,
+					plugins.underline,
+					plugins.strikethrough,
+					plugins.headings,
+					plugins.link,
+					plugins.image,
+					plugins.table,
+					plugins.fontSize,
+					plugins.fontFamily,
+					plugins.backgroundColor,
+					plugins.textColor,
+					plugins.findAndReplace,
+					plugins.sourceCode,
 				],
 				enableToolbarBubble: true,
 				hotkeys: [
-					{ keyStr: 'b', func: bold.commands[bold.name], modifierKeys: [KEY_CTRL] },
-					{ keyStr: 'i', func: italic.commands[italic.name], modifierKeys: [KEY_CTRL] },
-					{ keyStr: 'u', func: underline.commands[underline.name], modifierKeys: [KEY_CTRL] },
+					{ keyStr: 'b', func: plugins.bold.commands[plugins.bold.name], modifierKeys: [KEY_CTRL] },
+					{ keyStr: 'i', func: plugins.italic.commands[plugins.italic.name], modifierKeys: [KEY_CTRL] },
+					{ keyStr: 'u', func: plugins.underline.commands[plugins.underline.name], modifierKeys: [KEY_CTRL] },
 				],
 				hooks: {
 					onInput: (event) => {
