--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
 		<title>Exsied</title>
 	</head>
 	<body>
-		<p>Exsied demo: <span id="test"></span></p>
+		<p>
+			Exsied demo:
+			<a href="https://enassi.pages.dev/en/exsied/about/">Document</a> /
+			<a href="https://github.com/exsied/exsied">Github repo</a> /
+			<a href="https://gitee.com/exsied/exsied">Gite repo</a>
+		</p>
+		<p><span id="test"></span></p>
 		<div id="app"></div>
 		<script type="module" src="/src/index_dev.ts"></script>
 	</body>
