--- a/test_dist/index_esm.html
+++ b/test_dist/index_esm.html
@@ -39,11 +39,17 @@
 					plugins.underline,
 					plugins.strikethrough,
 					plugins.headings,
+					plugins.subscriptAndSuperscript,
 					plugins.link,
 					plugins.image,
 					plugins.table,
+					plugins.horizonalRule,
+					plugins.quote,
+					plugins.list,
 					plugins.fontSize,
 					plugins.fontFamily,
+					plugins.textAlign,
+					plugins.indentAndOutdent,
 					plugins.backgroundColor,
 					plugins.textColor,
 					plugins.findAndReplace,
