add  param to  plugin

--- a/demo.html
+++ b/demo.html
@@ -15,9 +15,9 @@
 		</p>
 		<div id="app"></div>
 
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exsied/exsied@0.5.3/dist/style.css" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exsied/exsied@0.6.0/dist/style.css" />
 		<script type="module">
-			import { KEY_CTRL, exsied, plugins } from 'https://cdn.jsdelivr.net/npm/@exsied/exsied@0.5.3/dist/index.js'
+			import { KEY_CTRL, exsied, plugins } from 'https://cdn.jsdelivr.net/npm/@exsied/exsied@0.6.0/dist/index.js'
 
 			plugins.about.conf.deveploers.push(
 				{
@@ -50,13 +50,12 @@
 					plugins.table,
 					plugins.horizonalRule,
 					plugins.quote,
-					plugins.list,
+					plugins.lists,
 					plugins.fontSize,
 					plugins.fontFamily,
 					plugins.textAlign,
 					plugins.indentAndOutdent,
-					plugins.backgroundColor,
-					plugins.textColor,
+					plugins.colors,
 					plugins.findAndReplace,
 					plugins.sourceCode,
 				],
