--- a/test_dist/index_esm.html
+++ b/test_dist/index_esm.html
@@ -45,13 +45,12 @@
 					plugins.table,
 					plugins.horizonalRule,
 					plugins.quote,
-					plugins.list,
+					plugins.lists,
 					plugins.fontSize,
 					plugins.fontFamily,
 					plugins.textAlign,
 					plugins.indentAndOutdent,
-					plugins.backgroundColor,
-					plugins.textColor,
+					plugins.colors,
 					plugins.findAndReplace,
 					plugins.sourceCode,
 				],
