--- a/demo.html
+++ b/demo.html
@@ -45,6 +45,7 @@
 					plugins.strikethrough,
 					plugins.headings,
 					plugins.subscriptAndSuperscript,
+					plugins.insertMenu,
 					plugins.link,
 					plugins.image,
 					plugins.table,
