--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<p>
 			Exsied demo:
-			<a href="https://exsied.pages.dev/demo">Full demo </a> /
+			<a href="https://exsied.pages.dev/demo">Live demo </a> /
 			<a href="https://enassi.pages.dev/en/exsied/about/">Document</a> /
 			<a href="https://github.com/exsied/exsied">Github repo</a> /
 			<a href="https://gitee.com/exsied/exsied">Gite repo</a>
