--- a/demo.html
+++ b/demo.html
@@ -90,7 +90,7 @@
 					plugins.fontFamily,
 					plugins.textAlign,
 					plugins.indentAndOutdent,
-					plugins.subscriptAndSuperscript,
+					plugins.subscriptAndSupscript,
 					plugins.insertMenu,
 					plugins.colors,
 					plugins.findAndReplace,
