--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<a href="https://github.com/exsied/exsied">Github repo</a> /
 			<a href="https://gitee.com/exsied/exsied">Gite repo</a>
 		</p>
-		<p><span id="test"></span></p>
+		<p><span id="optBtns"></span></p>
 		<div id="app"></div>
 		<script type="module" src="/src/index_dev.ts"></script>
 	</body>
