add some RedoAndUndo code

--- a/demo.html
+++ b/demo.html
@@ -79,6 +79,8 @@
 			exsied.init({
 				id: 'app',
 				plugins: [
+					plugins.redoAndUndo,
+					plugins.insertMenu,
 					plugins.bold,
 					plugins.italic,
 					plugins.underline,
@@ -95,7 +97,6 @@
 					plugins.textAlign,
 					plugins.indentAndOutdent,
 					plugins.subscriptAndSupscript,
-					plugins.insertMenu,
 					plugins.colors,
 					plugins.findAndReplace,
 					plugins.sourceCode,
