--- a/test_dist/index_esm.html
+++ b/test_dist/index_esm.html
@@ -85,22 +85,6 @@
 				console.info('plugin link clickLinkCb event: ', event)
 			}
 
-			// config i18n
-			//
-			// Set a new  dict
-			// exsied.i18n.setDict('zh-Hans', {
-			// 	Title: '标题',
-			// 	Alternative: '别名',
-			// 	Styles: '样式',
-			// 	Width: '宽度',
-			// 	Height: '高度',
-			// })
-			// exsied.i18n.setLocale('zh-Hans')
-			//
-			// Use English
-			exsied.i18n.setBuiltInLocales()
-			exsied.i18n.setLocale('en')
-
 			const initExsied = () => {
 				exsied.init({
 					id: 'app',
@@ -128,6 +112,7 @@
 						plugins.sourceCode,
 					],
 					enableToolbarBubble: true,
+					locale: 'en',
 					hotkeys: [
 						{ keyStr: 'b', func: plugins.bold.commands[plugins.bold.name], modifierKeys: [KEY_CTRL] },
 						{ keyStr: 'i', func: plugins.italic.commands[plugins.italic.name], modifierKeys: [KEY_CTRL] },
@@ -143,7 +128,21 @@
 
 				exsied.setHtml(DEMO_CONTENT)
 			}
+
 			initExsied()
+
+			// custom locale
+			//
+			// Set a new  dict
+			// exsied.i18n.setDict('zh-CN', {
+			// 	Title: '标题',
+			// 	Alternative: '别名',
+			// 	Styles: '样式',
+			// 	Width: '宽度',
+			// 	Height: '高度',
+			// })
+			// exsied.i18n.setLocale('zh-CN')
+			//
 
 			// getContentBtn
 			const getContentBtn = document.createElement('button')
