fix demo page change locale error

--- a/demo.html
+++ b/demo.html
@@ -84,7 +84,7 @@
 				console.info('plugin link clickLinkCb event: ', event)
 			}
 
-			const initExsied = () => {
+			const initExsied = (locale) => {
 				exsied.init({
 					id: 'app',
 					plugins: [
@@ -111,7 +111,7 @@
 						plugins.sourceCode,
 					],
 					enableToolbarBubble: true,
-					locale: 'en',
+					locale: locale || 'en',
 					hotkeys: [
 						{ keyStr: 'b', func: plugins.bold.commands[plugins.bold.name], modifierKeys: [KEY_CTRL] },
 						{ keyStr: 'i', func: plugins.italic.commands[plugins.italic.name], modifierKeys: [KEY_CTRL] },
@@ -188,10 +188,7 @@
 			}
 			localeSelect.addEventListener('change', (event) => {
 				const selectedValue = event.target.value
-				console.log(`Selected value: ${selectedValue}`)
-
-				exsied.i18n.setLocale(selectedValue)
-				initExsied()
+				initExsied(selectedValue)
 			})
 
 			const btnsEle = document.getElementById('optBtns')
