--- a/test_dist/index_esm.html
+++ b/test_dist/index_esm.html
@@ -85,7 +85,7 @@
 				console.info('plugin link clickLinkCb event: ', event)
 			}
 
-			const initExsied = () => {
+			const initExsied = (locale) => {
 				exsied.init({
 					id: 'app',
 					plugins: [
@@ -112,7 +112,7 @@
 						plugins.sourceCode,
 					],
 					enableToolbarBubble: true,
-					locale: 'en',
+					locale: locale || 'en',
 					hotkeys: [
 						{ keyStr: 'b', func: plugins.bold.commands[plugins.bold.name], modifierKeys: [KEY_CTRL] },
 						{ keyStr: 'i', func: plugins.italic.commands[plugins.italic.name], modifierKeys: [KEY_CTRL] },
@@ -189,10 +189,7 @@
 			}
 			localeSelect.addEventListener('change', (event) => {
 				const selectedValue = event.target.value
-				console.log(`Selected value: ${selectedValue}`)
-
-				exsied.i18n.setLocale(selectedValue)
-				initExsied()
+				initExsied(selectedValue)
 			})
 
 			const btnsEle = document.getElementById('optBtns')
