--- a/demo.html
+++ b/demo.html
@@ -9,7 +9,7 @@
 		<p>
 			Exsied demo:
 			<a href="https://exsied.pages.dev/demo">Live demo </a> /
-			<a href="https://enassi.pages.dev/en/exsied/about/">Document</a> /
+			<a href="https://fivim.pages.dev/en/exsied/about/">Document</a> /
 			<a href="https://github.com/exsied/exsied">Github repo</a> /
 			<a href="https://gitee.com/exsied/exsied">Gite repo</a>
 		</p>
@@ -27,11 +27,11 @@
 			const aboutConf = plugins.about.conf
 			aboutConf.deveploers.push(
 				{
-					name: 'enassi',
-					repoLink: 'https://github.com/enassi/enassi',
+					name: 'fivim',
+					repoLink: 'https://github.com/fivim/fivim',
 					webSiteLink: 'https://xxx.com/xxx',
 					email: 'xxx@xxx.xxx',
-					extContent: `Enassi's github repo`,
+					extContent: `Fivim's github repo`,
 				},
 				{
 					name: 'exsied',
