--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 			<a href="https://gitee.com/exsied/exsied">Gite repo</a>
 		</p>
 		<p><span id="optBtns"></span></p>
-		<div id="app"></div>
+
+		<p>Instance short:</p>
+		<div id="appShort"></div>
+		<p>Instance long:</p>
+		<div id="appLong"></div>
+
 		<script type="module" src="/src/index_dev.ts"></script>
 	</body>
 </html>
